<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".ImcActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:text="@string/tbm_descricao" />
        <EditText
            android:id="@+id/edit_imc_peso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/peso"/>
        <EditText
            android:id="@+id/edit_imc_altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/altura"/>

        <EditText
            android:id="@+id/edit_idade"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:hint="@string/idade"
            android:inputType="number"
            android:maxLength="3" />
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/edit_Mas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Masculinno"
        android:layout_marginLeft="30dp"
        ></RadioButton>

    <RadioButton
        android:id="@+id/edit_Fe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Feminino"
        android:layout_marginLeft="30dp"
        ></RadioButton>

</RadioGroup>



        <Button
            android:id="@+id/botao_Tbm_calcula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:background="@color/teal_200"
            android:textColor="@android:color/white"
            android:text="@string/calcular"/>


        <TextView
            android:id="@+id/novo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"/>
    </LinearLayout>
</ScrollView>